// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tabs #render should render as expected 1`] = `
<gux-tabs class="example">
  <template shadowrootmode="open">
    <div class="gux-horizontal gux-left gux-tabs">
      <slot name="tab-list"></slot>
      <div class="gux-horizontal gux-left gux-panel-container">
        <slot></slot>
      </div>
    </div>
  </template>
  <gux-tab-list slot="tab-list">
    <!---->
    <div class="gux-tab-container">
      <div class="gux-scroll-button-container"></div>
      <div aria-owns="gux-2-1-tab gux-2-2-tab gux-2-3-tab" class="gux-scrollable-section" role="tablist">
        <gux-tab tab-id="2-1">
          <!---->
          <button aria-controls="gux-2-1-panel" aria-selected="false" class="gux-tab" id="gux-2-1-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 1
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab tab-id="2-2">
          <!---->
          <button aria-controls="gux-2-2-panel" aria-selected="false" class="gux-tab" id="gux-2-2-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 2
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab tab-id="2-3">
          <!---->
          <button aria-controls="gux-2-3-panel" aria-selected="false" class="gux-tab" id="gux-2-3-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 3
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab gux-disabled="" tab-id="2-4">
          <!---->
          <button aria-controls="gux-2-4-panel" aria-selected="false" class="gux-disabled gux-tab" disabled="" id="gux-2-4-tab" role="tab" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 4
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab gux-disabled="" tab-id="2-5">
          <!---->
          <button aria-controls="gux-2-5-panel" aria-selected="false" class="gux-disabled gux-tab" disabled="" id="gux-2-5-tab" role="tab" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 5
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
      </div>
      <div class="gux-scroll-button-container"></div>
    </div>
  </gux-tab-list>
  <gux-tab-panel aria-labelledby="gux-2-1-tab" hidden="" id="gux-2-1-panel" role="tabpanel" tab-id="2-1" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 1
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-2-tab" hidden="" id="gux-2-2-panel" role="tabpanel" tab-id="2-2" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 2
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-3-tab" hidden="" id="gux-2-3-panel" role="tabpanel" tab-id="2-3" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 3
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-4-tab" hidden="" id="gux-2-4-panel" role="tabpanel" tab-id="2-4" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 4
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-5-tab" hidden="" id="gux-2-5-panel" role="tabpanel" tab-id="2-5" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 5
  </gux-tab-panel>
</gux-tabs>
`;

exports[`gux-tabs #render should render vertical tabs as expected 1`] = `
<gux-tabs orientation="vertical">
  <template shadowrootmode="open">
    <div class="gux-left gux-tabs gux-vertical">
      <slot name="tab-list"></slot>
      <div class="gux-left gux-panel-container gux-vertical">
        <slot></slot>
      </div>
    </div>
  </template>
  <gux-tab-list slot="tab-list">
    <!---->
    <div class="gux-tab-container">
      <div class="gux-scroll-button-container"></div>
      <div aria-owns="gux-2-1-tab gux-2-2-tab gux-2-3-tab" class="gux-scrollable-section" role="tablist">
        <gux-tab tab-id="2-1">
          <!---->
          <button aria-controls="gux-2-1-panel" aria-selected="false" class="gux-tab" id="gux-2-1-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 1
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab tab-id="2-2">
          <!---->
          <button aria-controls="gux-2-2-panel" aria-selected="false" class="gux-tab" id="gux-2-2-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 2
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab tab-id="2-3">
          <!---->
          <button aria-controls="gux-2-3-panel" aria-selected="false" class="gux-tab" id="gux-2-3-tab" role="tab" tabindex="-1" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 3
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab gux-disabled="" tab-id="2-4">
          <!---->
          <button aria-controls="gux-2-4-panel" aria-selected="false" class="gux-disabled gux-tab" disabled="" id="gux-2-4-tab" role="tab" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 4
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
        <gux-tab gux-disabled="" tab-id="2-5">
          <!---->
          <button aria-controls="gux-2-5-panel" aria-selected="false" class="gux-disabled gux-tab" disabled="" id="gux-2-5-tab" role="tab" type="button">
            <gux-tooltip-title>
              <span>
                Tab Header 5
              </span>
            </gux-tooltip-title>
          </button>
        </gux-tab>
      </div>
      <div class="gux-scroll-button-container"></div>
    </div>
  </gux-tab-list>
  <gux-tab-panel aria-labelledby="gux-2-1-tab" hidden="" id="gux-2-1-panel" role="tabpanel" tab-id="2-1" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 1
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-2-tab" hidden="" id="gux-2-2-panel" role="tabpanel" tab-id="2-2" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 2
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-3-tab" hidden="" id="gux-2-3-panel" role="tabpanel" tab-id="2-3" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 3
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-4-tab" hidden="" id="gux-2-4-panel" role="tabpanel" tab-id="2-4" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 4
  </gux-tab-panel>
  <gux-tab-panel aria-labelledby="gux-2-5-tab" hidden="" id="gux-2-5-panel" role="tabpanel" tab-id="2-5" tabindex="0">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Tab content 5
  </gux-tab-panel>
</gux-tabs>
`;
